[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"
description = "Learning Rust #1: Tiny echo CLI and ownership/borrowing basics."
license = "MIT"
repository = "https://github.com/pribeiro-dev/learning-rust-01-hello-rust"
authors = ["Pedro Ribeiro <pedroworibeiro@gmail.com>"]
rust-version = "1.74.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
